# swagger/consult.swagger.yml
@@ -161,3 +161,86 @@ paths:
               message:
                 type: string
                 example: 서버 에러, 관리자에게 문의 바랍니다.
+  /consulting/requirements/mood:
+    patch:
+      tags:
+        - Consulting
+      summary: 분위기 추가
+      parameters:
+      - name: addMood
+        in: body
+        required: true
+        schema:
+          properties:
+            consulting_id:
+              type: bigint
+              description: 컨설팅 id
+              example: 1
+            mood:
+              type: string
+              description: 분위기
+              example: "깔끔한 화이트톤"
+
+      responses:
+        '200':
+          description: 분위기 추가 성공!
+          schema:
+            type: object
+            properties:
+              status:
+                type: integer
+                example: 200
+              isSuccess:
+                type: boolean
+                example: true
+              code:
+                type: integer
+                example: 2000
+              message:
+                type: string
+                example: "success!"
+              data:
+                type: object
+                example: 
+                  "consulting_id": 23
+                  "house_size": "5평 ~ 10평"
+                  "room_num": "2개"
+                  "mood": "깔끔한 화이트톤"
+                  "concern": null
+                  "status": "step1"
+                
+        '400':
+          description: 잘못된 요청
+          schema:
+            type: object
+            properties:
+              status:
+                type: integer
+                example: 400
+              isSuccess:
+                type: boolean
+                example: false
+              code:
+                type: integer
+                example: COMMON001
+              message:
+                type: string
+                example: 잘못된 요청입니다
+
+        '500':
+          description: 서버 에러
+          schema:
+            type: object
+            properties:
+              status:
+                type: integer
+                example: 500
+              isSuccess:
+                type: boolean
+                example: false
+              code:
+                type: integer
+                example: COMMON000
+              message:
+                type: string
+                example: 서버 에러, 관리자에게 문의 바랍니다.
